app/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-service
  namespace: phpns
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer
