app/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  namespace: phpns
spec:
  selector:
    app: php-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
