app/mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: phpns
spec:
  rules:
    - host: mysql.local.com  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysql-db-service
                port:
                  number: 3306
